Add mach number and angle of attack bounds for adaptive sampling to the reduced order parameter file for naca cases. Created a test to run the inviscid naca6512 case.

--- a/tests/integration_tests_control_files/reduced_order/CMakeLists.txt
+++ b/tests/integration_tests_control_files/reduced_order/CMakeLists.txt
@@ -80,6 +80,16 @@ add_test(
 )
 
 # =======================================
+# Inviscid NACA6512 Adaptive Sampling
+# =======================================
+configure_file(inviscid_naca6512_adaptive_sampling.prm inviscid_naca6512_adaptive_sampling.prm COPYONLY)
+add_test(
+        NAME INVISCID_NACA6512_ADAPTIVE_SAMPLING
+        COMMAND mpirun -np ${MPIMAX} ${EXECUTABLE_OUTPUT_PATH}/PHiLiP_2D -i ${CMAKE_CURRENT_BINARY_DIR}/inviscid_naca6512_adaptive_sampling.prm
+        WORKING_DIRECTORY ${TEST_OUTPUT_DIR}
+)
+
+# =======================================
 # Inviscid NACA0012 Adaptive Sampling Testing
 # =======================================
 #configure_file(inviscid_naca0012_adaptive_sampling_testing.prm inviscid_naca0012_adaptive_sampling_testing.prm COPYONLY)
